--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-1.11.3.js"></script>
     <script src="js/scripts.js"></script>
 
-    <title>Ping Pong Test</title>
+    <title>Ping Pong Test!</title>
   </head>
 
   <body>
-    <h1>Ping-Pong!</h1>
+    <div id="container">
+      <h1>Ping-Pong!</h1>
 
-    <ul id="ping">
-    </ul>
+      <ul id="numlist">
+      </ul>
+    </div>
   </body>
 </html>
